--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy to HestiaCP
+name: Build and Deploy to HestiaCP
 
 on:
   push:
@@ -6,30 +6,53 @@ on:
       - dev
 
 jobs:
-  deploy:
+  build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Deploy via SSH
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: '8.2' # Ajusta a la versión de tu servidor
+          extensions: mbstring, xml, ctype, iconv, intl, pdo_mysql
+          tools: composer
+
+      - name: Install dependencies
+        run: composer install --no-dev --optimize-autoloader
+
+      - name: Deploy to Server via Rsync
+        uses: Burnett01/rsync-deployments@7.0.1
+        with:
+          switches: -avzr --delete
+          path: ./
+          remote_path: ${{ secrets.DEPLOY_PATH_PORTAL }}
+          remote_host: ${{ secrets.SSH_HOST }}
+          remote_user: ${{ secrets.SSH_USER }}
+          remote_key: ${{ secrets.SSH_PRIVATE_KEY }}
+          # Excluimos carpetas de desarrollo y configuración de CI
+          exclude: |
+            .git/
+            .github/
+            .editorconfig
+            .php-cs-fixer.dist.php
+            phpstan.neon
+            phpunit.xml.dist
+            tests/
+            tests-legacy/
+            Dockerfile
+            rector.php
+
+      - name: Post-deployment permissions
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
-            echo "Deploying dev branch to portal.enitysky.dev on HestiaCP"
-            
-            # 1. Access portal directory
+            # Asegurar permisos de escritura en carpetas de datos tras la sincronización
             cd ${{ secrets.DEPLOY_PATH_PORTAL }}
-            
-            # 2. Update source code (Reset hard strategy)
-            git fetch origin
-            git reset --hard origin/dev
-            
-            # 3. Install dependencies
-            composer install --no-dev --optimize-autoloader
-            
-            # 4. Correct permissions for FOSSBilling
             chmod -R 775 src/data
-            
-            # Success message
-            echo "Deployment completed successfully!"
+            # Opcional: limpiar cache si FOSSBilling lo requiere
+            # rm -rf src/data/cache/*
