--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,8 +2,11 @@ name: CI
 
 on:
   push:
+    branches:
+      - upstream
   pull_request:
-    branches: main
+    branches:
+      - upstream
 
 jobs:
   spellcheck:
