--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Deploy to Server via Rsync
         uses: Burnett01/rsync-deployments@7.0.1
         with:
-          switches: -avzr --delete --exclude=.git/ --exclude=.github/ --exclude=.editorconfig --exclude=.php-cs-fixer.dist.php --exclude=phpstan.neon --exclude=phpunit.xml.dist --exclude=tests/ --exclude=tests-legacy/ --exclude=Dockerfile --exclude=rector.php --exclude=src/config.php
+          switches: -avzr --delete --exclude=.git/ --exclude=.github/ --exclude=.editorconfig --exclude=.php-cs-fixer.dist.php --exclude=phpstan.neon --exclude=phpunit.xml.dist --exclude=tests/ --exclude=tests-legacy/ --exclude=Dockerfile --exclude=rector.php --exclude=src/config.php --exclude=src/data/cache/ --exclude=src/data/log/ --exclude=src/data/uploads/
           path: ./
           remote_path: ${{ secrets.DEPLOY_PATH_PORTAL }}
           remote_host: ${{ secrets.SSH_HOST }}
@@ -49,11 +49,11 @@ jobs:
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.SSH_HOST }}
+          port: ${{ secrets.SSH_PORT || 22 }}
           username: ${{ secrets.SSH_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
-            # Asegurar permisos de escritura en carpetas de datos tras la sincronización
+            # Asegurar que las carpetas de datos existan y tengan permisos (por seguridad)
             cd ${{ secrets.DEPLOY_PATH_PORTAL }}
+            mkdir -p src/data/cache src/data/log src/data/uploads
             chmod -R 775 src/data
-            # Opcional: limpiar cache si FOSSBilling lo requiere
-            # rm -rf src/data/cache/*
